--- a/market/templates/error.html
+++ b/market/templates/error.html
@@ -11,6 +11,6 @@
     <div class="alert alert-warning" role="alert">
         {{ msg or "未知的錯誤，請聯繫管理員。" }}
     </div>
-    <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">返回首頁</a>
+    <a href="{{ url_for('main.home') }}" class="btn btn-primary mt-3">返回首頁</a>
 </div>
 {% endblock %}
