--- a/market/templates/home.html
+++ b/market/templates/home.html
@@ -19,14 +19,14 @@
         {% for product in products %}
         <div class="col">
             <div class="card h-100 shadow-sm">
-                <img src="{{ product.image_url or url_for('static', filename='images/placeholder.png') }}" class="card-img-top" alt="{{ product.name }}">
+                <img src="{{ product.image_url or url_for('main.static', filename='images/placeholder.png') }}" class="card-img-top" alt="{{ product.name }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text text-muted">{{ product.description[:50] ~ '...' }}</p>
                     <h4 class="text-danger fw-bold">$ {{ product.price }}</h4>
                 </div>
                 <div class="card-footer bg-transparent border-top-0">
-                    <a href="{{ url_for('product', product_id=product.id) }}" class="btn btn-outline-primary w-100">查看詳情</a>
+                    <a href="{{ url_for('main.product', product_id=product.id) }}" class="btn btn-outline-primary w-100">查看詳情</a>
                 </div>
             </div>
         </div>
