--- a/market/templates/layout.html
+++ b/market/templates/layout.html
@@ -28,26 +28,26 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="{{ url_for('home') }}">MARKET</a>
+            <a class="navbar-brand fw-bold" href="{{ url_for('main.home') }}">MARKET</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('home') }}">首頁</a>
+                        <a class="nav-link" href="{{ url_for('main.home') }}">首頁</a>
                     </li>
                     </ul>
                 <ul class="navbar-nav">
                     {% if session.get('user_id') %}
                         <li class="nav-item">
-                            <a href="{{ url_for('cart') }}" class="nav-link">
+                            <a href="{{ url_for('main.cart') }}" class="nav-link">
                                 <i class="bi bi-cart3"></i> 購物車
                             </a>
                         </li>
                         {% if session.get('is_admin') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('admin') }}">管理後台</a>
+                            <a class="nav-link" href="{{ url_for('main.admin') }}">管理後台</a>
                         </li>
                         {% endif %}
                         <li class="nav-item dropdown">
@@ -55,15 +55,15 @@
                                 <i class="bi bi-person-circle"></i> {{ session.get('nickname', '使用者') }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{{ url_for('logout') }}">登出</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.logout') }}">登出</a></li>
                             </ul>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">登入</a>
+                            <a class="nav-link" href="{{ url_for('main.login') }}">登入</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">註冊</a>
+                            <a class="nav-link" href="{{ url_for('main.register') }}">註冊</a>
                         </li>
                     {% endif %}
                 </ul>
